--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,8 +134,8 @@ a {
     display: inline-block;
     width: 20px;
     height: 20px;
-    border-bottom: 5px solid rgba(238, 99, 106, 1);
-    border-right: 5px solid rgba(238, 99, 106, 1);
+    border-bottom: 5px solid #fff;
+    border-right: 5px solid #fff;
     transform: rotate(-45deg);
     margin: -10px;
     animation: animate 2s infinite;
