--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,7 +51,7 @@ body{
 
 .info{
     position: relative;
-    height: 80%;
+    height: 840px;
     width: 90%;
     padding: 10px;
    /* background-color: #323445; */
